Fix java 11 compile